<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/box_one_text"
            style="@style/whiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin16"
            android:layout_marginTop="@dimen/margin16"
            android:layout_marginRight="@dimen/margin16"
            android:text="@string/textone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hello World!" />

        <TextView
            android:id="@+id/box_two_text"
            style="@style/whiteBox"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="@dimen/margin16"
            android:text="@string/texttwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_one_text" />

        <TextView
            android:id="@+id/box_three_text"
            style="@style/whiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginEnd="@dimen/margin16"
            android:text="@string/textthree"
            app:layout_constraintBottom_toTopOf="@id/box_four_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/box_two_text"
            app:layout_constraintTop_toTopOf="@id/box_two_text"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/box_four_text"
            style="@style/whiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginEnd="@dimen/margin16"
            android:text="@string/textfour"
            app:layout_constraintBottom_toTopOf="@id/box_five_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/box_two_text"
            app:layout_constraintTop_toBottomOf="@id/box_three_text" />

        <TextView
            android:id="@+id/box_five_text"
            style="@style/whiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginEnd="@dimen/margin16"
            android:text="@string/textfive"
            app:layout_constraintBottom_toBottomOf="@id/box_two_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/box_two_text"
            app:layout_constraintTop_toBottomOf="@id/box_four_text" />

        <TextView
            android:id="@+id/how_to_play_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/how_to_play"
            android:textSize="@dimen/box_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_two_text"
            app:layout_constraintVertical_bias="0.045" />

        <TextView
            android:id="@+id/explanation_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/tap_on_the_screen_and_buttons"
            android:layout_marginEnd="@dimen/margin16"
            android:layout_marginStart="@dimen/margin16"
            app:layout_constraintBaseline_toBaselineOf="@+id/how_to_play_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/how_to_play_text" />

        <Button
            android:id="@+id/yellow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/green_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintBaseline_toBaselineOf="@id/green_button"
            android:text="@string/yellow"
            android:fontFamily="@font/roboto"
            />
        <Button
            android:id="@+id/green_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/yellow_button"
            app:layout_constraintEnd_toStartOf="@id/blue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/explanation_text"
            app:layout_constraintVertical_bias="0.95"
            android:text="@string/green"
            android:fontFamily="@font/roboto"
            />
        <Button
            android:id="@+id/blue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin16"
            app:layout_constraintStart_toEndOf="@id/green_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/green_button"
            android:text="@string/blue"
            android:fontFamily="@font/roboto"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
